--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hexo-renderer-marked",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "Markdown renderer plugin for Hexo",
   "main": "index",
   "repository": {
@@ -22,6 +22,7 @@
     "url": "https://raw.github.com/tommy351/hexo/master/LICENSE"
   },
   "dependencies": {
-    "marked": "^0.3.2"
+    "marked": "^0.3.2",
+    "lodash": "^2.4.1"
   }
 }
