--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
   "author": "Tommy Chen <tommy351@gmail.com> (http://zespia.tw)",
   "license": "MIT",
   "dependencies": {
-    "hexo-util": "0.0.2",
-    "lodash": "^2.4.1",
+    "hexo-util": "^0.1.0",
     "marked": "^0.3.2",
+    "object-assign": "^2.0.0",
     "strip-indent": "^1.0.0"
   },
   "devDependencies": {
