--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "renderer"
   ],
   "author": "Tommy Chen <tommy351@gmail.com> (http://zespia.tw)",
+  "maintainers": [
+    "Abner Chou <hi@abnerchou.me> (http://abnerchou.me)"
+    ],
   "license": "MIT",
   "dependencies": {
     "hexo-util": "^0.6.0",
@@ -30,6 +33,7 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "eslint": "^2.12.0",
+    "babel-eslint": "^7.2.1",
     "eslint-config-hexo": "^1.0.3",
     "istanbul": "^0.4.3",
     "jscs": "^3.0.4",
