fix eslint issues

--- a/test/.eslintrc
+++ b/test/.eslintrc
@@ -1,3 +1,7 @@
 {
-  "extends": "hexo/test"
+  "extends": "hexo/test",
+  "rules": {
+    "indent": ["error", 2, { "ArrayExpression": 1 }],
+    "no-useless-escape": 0
+  }
 }
