--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "license": "MIT",
   "dependencies": {
     "hexo-util": "^0.6.2",
+    "katex": "^0.10.0-beta",
     "marked": "^0.3.9",
     "object-assign": "^4.1.1",
     "strip-indent": "^2.0.0"
