--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   "directories": {
     "lib": "./lib"
   },
+  "files": [
+    "lib",
+    "index.js"
+  ],
   "repository": "hexojs/hexo-renderer-marked",
   "keywords": [
     "hexo",
