--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "eslint": "eslint .",
     "test": "mocha test/index.js",
-    "test-cov": "istanbul cover --print both _mocha -- test/index.js"
+    "test-cov": "nyc npm run test"
   },
   "directories": {
     "lib": "./lib"
@@ -37,8 +37,8 @@
     "eslint": "^6.0.1",
     "babel-eslint": "^10.0.1",
     "eslint-config-hexo": "^3.0.0",
-    "istanbul": "^0.4.5",
-    "mocha": "^6.1.4"
+    "mocha": "^6.1.4",
+    "nyc": "^14.1.1"
   },
   "engines": {
     "node": ">=8.6.0"
