--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "hexo-util": "^0.6.3",
+    "hexo-util": "1.0.0",
     "marked": "^0.7.0",
     "strip-indent": "^3.0.0"
   },
