--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "hexo-util": "^1.0.1",
+    "hexo": "^3.9.0",
+    "hexo-util": "^1.3.0",
     "marked": "^0.7.0",
     "strip-indent": "^3.0.0"
   },
