style: eslint-config-hexo@4

--- a/test/.eslintrc
+++ b/test/.eslintrc
@@ -1,7 +1,3 @@
 {
-  "extends": "hexo/test",
-  "rules": {
-    "indent": ["error", 2, { "ArrayExpression": 1 }],
-    "no-useless-escape": 0
-  }
+  "extends": "hexo/test"
 }
