feat: marked:renderer filter (#129)
* Add marked:renderer filter

* Fix eslint

* Add hexo instance fo test

* Del package-lock.json ....

* Update test/index.js

Co-Authored-By: Sukka <isukkaw@gmail.com>

* Update test/index.js

Co-Authored-By: Sukka <isukkaw@gmail.com>

* Fix eslint

Co-authored-by: Sukka <isukkaw@gmail.com>

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "chai": "^4.2.0",
     "eslint": "^6.0.1",
     "eslint-config-hexo": "^4.0.0",
+    "hexo": "^4.2.0",
     "mocha": "^6.1.4",
     "nyc": "^15.0.0"
   },
