--- a/package.json
+++ b/package.json
@@ -28,8 +28,9 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "hexo-util": "^2.1.0",
-    "marked": "^2.0.0"
+    "hexo-util": "^2.5.0",
+    "marked": "^2.1.3",
+    "dompurify": "^2.3.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
