--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
   "dependencies": {
     "hexo-util": "^2.5.0",
     "marked": "^2.1.3",
-    "dompurify": "^2.3.0"
+    "dompurify": "^2.3.0",
+    "jsdom": "^16.7.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
