--- a/.github/workflows/tester.yml
+++ b/.github/workflows/tester.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        node-version: ['10.x', '12.x', '14.x']
+        node-version: ['10.x', '12.x', '14.x', '16.x']
       fail-fast: false
     steps:
       - uses: actions/checkout@v2
@@ -37,11 +37,11 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
       - name: Cache NPM dependencies
-        uses: actions/cache@v1
+        uses: actions/cache@v2
         with:
           path: node_modules
           key: ${{ runner.os }}-npm-cache
