--- a/.github/workflows/tester.yml
+++ b/.github/workflows/tester.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        node-version: ['10.x', '12.x', '14.x', '16.x']
+        node-version: ['12.x', '14.x', '16.x']
       fail-fast: false
     steps:
       - uses: actions/checkout@v2
@@ -17,15 +17,15 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - name: Cache NPM dependencies
-        uses: actions/cache@v1
+        uses: actions/cache@v2
         with:
           path: node_modules
           key: ${{ runner.os }}-npm-cache
           restore-keys: ${{ runner.os }}-npm-cache
       - name: Install Dependencies
-        run: npm install
+        run: npm i
       - name: Test
-        run: npm run test
+        run: npm test
         env:
           CI: true
   coverage:
@@ -33,7 +33,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        node-version: ['12.x']
+        node-version: ['14.x']
     steps:
       - uses: actions/checkout@v2
       - name: Use Node.js ${{ matrix.node-version }}
