--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "eslint": "eslint .",
     "test": "mocha test/index.js",
-    "test-cov": "nyc --reporter=lcovonly npm run test"
+    "test-cov": "c8 --reporter=lcovonly npm run test"
   },
   "directories": {
     "lib": "./lib"
@@ -28,18 +28,18 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "hexo-util": "^2.5.0",
-    "marked": "^4.0.1",
-    "dompurify": "^2.3.0",
-    "jsdom": "^20.0.1"
+    "dompurify": "^2.4.0",
+    "hexo-util": "^2.7.0",
+    "jsdom": "^20.0.1",
+    "marked": "^4.1.1"
   },
   "devDependencies": {
-    "chai": "^4.2.0",
-    "eslint": "^8.0.0",
+    "c8": "^7.12.0",
+    "chai": "^4.3.6",
+    "eslint": "^8.24.0",
     "eslint-config-hexo": "^5.0.0",
-    "hexo": "^6.0.0",
-    "mocha": "^10.0.0",
-    "nyc": "^15.0.0"
+    "hexo": "^6.3.0",
+    "mocha": "^10.0.0"
   },
   "engines": {
     "node": ">=14"
