chore: update `repository` key from a string to an object in `package.json`

--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "lib",
     "index.js"
   ],
-  "repository": "hexojs/hexo-renderer-marked",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/hexojs/hexo-renderer-marked.git"
+  },
   "keywords": [
     "hexo",
     "markdown",
