--- a/.github/workflows/tester.yml
+++ b/.github/workflows/tester.yml
@@ -9,6 +9,10 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
         node-version: ["14.x", "16.x", "18.x"]
+        exclude:
+          # https://docs.github.com/en/actions/writing-workflows/choosing-what-your-workflow-does/running-variations-of-jobs-in-a-workflow#excluding-matrix-configurations
+          - os: macos-latest
+            node-version: 14.x
       fail-fast: false
     steps:
       - uses: actions/checkout@v2
