--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -6,11 +6,11 @@ jobs:
   linter:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Use Node.js 14.x
+      - uses: actions/checkout@v4
+      - name: Use Node.js 22
         uses: actions/setup-node@v4
         with:
-          node-version: "14.x"
+          node-version: "22"
       - name: Cache NPM dependencies
         uses: actions/cache@v4
         with:
